@@ -1,6 +1,7 @@
 package com.example.magnet.payment.mapper;
 
 import com.example.magnet.payment.dto.ChargingHistoryDto;
+import com.example.magnet.payment.dto.PaymentResponseDto;
 import com.example.magnet.payment.entity.Payment;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
@@ -25,6 +26,15 @@ public class PaymentMapper {
                             .createdAt(chargingHistory.getCreatedDate())
                             .isPaySuccessYN(chargingHistory.isPaySuccessYN())
                             .build();
-                }).collect(Collectors.toList());
+                }).toList();
+    }
+
+    public static PaymentResponseDto PaymentToPaymentDto(Payment payment){
+        return PaymentResponseDto.builder()
+                .payType(payment.getPayType().toString())
+                .orderName(payment.getOrderName())
+                .amount(payment.getAmount())
+                .createdAt(payment.getCreatedDate().toString())
+                .build();
     }
 }
